# voxcpm-cpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md  acceptance_report.md  architecture.md  c_api.md  diagnosis.md  err.txt  err_cpu.txt  err_cpu2.txt  err_cpu3.txt  err_debug.txt  err_fixed2.txt  final.md  full_output.txt  ggml_backend.md  lessons.md  manifest.json  model_conversion.md  out_debug.txt  out_orig.txt  plan.md  rollback.md  spec.md  stderr_cpu.txt  stderr_debug.txt  stdout_cpu.txt  test.md  test_audio_player.html  todos.md  traceability_matrix.md  voxcpm-cpp-improvement-report-v2.md  voxcpm-cpp-improvement-report.md  voxcpm2-tts-ggml-research.md
.github/workflows/: ci.yml
build-cpu/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  check_alpha.vcxproj  check_alpha.vcxproj.filters  cmake_install.cmake  dump_tensors.vcxproj  dump_tensors.vcxproj.filters  quantize.vcxproj  quantize.vcxproj.filters  test_cfm_parity.vcxproj  test_cfm_parity.vcxproj.filters  test_conv1d_only.vcxproj  test_conv1d_only.vcxproj.filters  test_conv_layout.vcxproj  test_conv_layout.vcxproj.filters  test_conv_verify.vcxproj  test_conv_verify.vcxproj.filters  test_depthwise_only.vcxproj  test_depthwise_only.vcxproj.filters  test_latent_parity.vcxproj  test_latent_parity.vcxproj.filters  test_minicpm4.vcxproj  test_minicpm4.vcxproj.filters  test_model9_only.vcxproj  test_model9_only.vcxproj.filters  test_model_loader_tensors.vcxproj  test_model_loader_tensors.vcxproj.filters  test_model_tts_smoke.vcxproj  test_model_tts_smoke.vcxproj.filters  (+25 more)
build-cuda-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
build_cuda/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  check_alpha.vcxproj  check_alpha.vcxproj.filters  cmake_install.cmake  dump_tensors.vcxproj  dump_tensors.vcxproj.filters  quantize.vcxproj  quantize.vcxproj.filters  test_cfm_parity.vcxproj  test_cfm_parity.vcxproj.filters  test_conv1d_only.vcxproj  test_conv1d_only.vcxproj.filters  test_conv_layout.vcxproj  test_conv_layout.vcxproj.filters  test_conv_verify.vcxproj  test_conv_verify.vcxproj.filters  test_cuda_ops.vcxproj  test_cuda_ops.vcxproj.filters  test_depthwise_only.vcxproj  test_depthwise_only.vcxproj.filters  test_fixture_parity.vcxproj  test_fixture_parity.vcxproj.filters  test_latent_parity.vcxproj  test_latent_parity.vcxproj.filters  test_minicpm4.vcxproj  test_minicpm4.vcxproj.filters  test_model9_only.vcxproj  test_model9_only.vcxproj.filters  (+29 more)
build_cuda_ninja/: CMakeCache.txt
docs/: SOURCES.md  backend-matrix-2026-06-30.json  backend-matrix-2026-06-30.md  converter-contract-2026-06-30.md  python-parity-fixes-2026-06-29.md  runtime-memory-2026-06-30.md  source_analysis.md  tslm-ralm-control.md  voice-clone-python-parity-2026-06-29.md
examples/: texts.txt
fixtures/: debug_block_chain.py  test_vae_fast_ref.py  test_vae_python_ref.py  test_vae_simple_ref.py
fixtures/ref/: ar0000_d0000_cfm_traj_state.npy  ar0000_d0001_cfm_velocity_blend.npy  ar0000_d0002_cfm_traj_state.npy  ar0000_d0002_cfm_velocity_blend.npy  ar0000_d0002_cfm_velocity_cond.npy  (+859 more)
include/: voxcpm.h
scripts/: build-release.ps1  validate-backend-matrix.ps1
src/: audio_vae.c  audio_vae.h  audio_vae_stream.c  audio_vae_stream.h  audio_vae_v2.c  audio_vae_v2.h  audio_vae_v2_decoder.c  audio_vae_v2_encoder.c  cfm_solver.c  cfm_solver.h  clone_audio.c  clone_audio.h  compile_flags.txt  debug_dump.h  denoiser.c  denoiser.h  error.h  fsq.c  fsq.h  gen_init.c  gen_prompt.c  gen_run.c  gen_step.c  gen_stop.c  generate.c  generate.h  ggml_backend.c  ggml_backend.h  locdit.c  locdit.h  locenc.c  locenc.h  log.c  log.h  main.c  minicpm4.c  minicpm4.h  model_loader.c  model_loader.h  projections.h  (+11 more)
tests/: debug_attention.py  debug_attention_compare.py  debug_attention_dump.c  debug_attention_dump2.c  test_backend_matrix_report.ps1  test_base_lm_recurrence.c  test_cfm_parity.c  test_cfm_schedule.c  test_clone_padding.c  test_clone_prompt_plan.c  test_clone_sequence.c  test_conv1d_only.c  test_conv_verify.c  test_cuda_ops.c  test_denoiser.c  test_depthwise_only.c  test_fixture_parity.c  test_generation_memory.c  test_latent_parity.c  test_minicpm4.c  test_model9_only.c  test_model_clone_smoke.c  test_model_loader_tensors.c  test_model_tts_smoke.c  test_phase5.c  test_prompt_cuda_probe.c  test_repository_hygiene.ps1  test_sequence.c  test_smoke.c  test_stop.c  test_text_control.c  test_tokenizer_parity.c  test_upconv.py  test_upconv2.py  test_upconv_f16.py  test_vae_dump.c  test_vae_encoder_parity.c  test_vae_layout.c  test_vae_only.c  test_vae_reference.c  (+2 more)
tools/: analyze_audio_quality.py  analyze_wav_detail.py  bisect_q8.py  check_alpha.c  check_weights.py  compare_dumps.py  compare_fixtures.py  compare_snapshots.py  compute_expected_model9.py  convert_gguf_mixed.py  convert_gguf_to_f32.py  convert_voxcpm2_to_gguf.py  debug_gguf.py  debug_gguf2.py  debug_gguf3.py  debug_gguf_write.py  debug_vae_block.c  dump_tensors.c  dump_upconv_input.c  export_base_lm_recurrence_fixture.py  export_clone_fixtures.py  export_ref_fixtures.py  export_vae_encoder_fixture.py  fix_q8_model.py  fix_q8_model2.py  gen_spectrogram.py  gguf_hex_dump.py  inspect_audiovae.py  inspect_safetensors.py  quantize.c  run_recurrence_parity.py  test_conv_layout.c  test_depthwise_only.c  test_latent_parity.c  test_model9_only.c  test_q8_read.py  test_tokenizer.py  test_tokenizer2.py  test_vae_dump.c  test_vae_only.c  (+5 more)
(+461 files in other folders)
